--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "csrf": "^3.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "nodemon": "^3.1.9"
   }
 }
