--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
     "compilerOptions": {
-        "target": "es2016",
-        "jsx": "preserve",
-        "module": "commonjs",
-        "allowJs": true,
-        "outDir": "./dist",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true
+      "typeRoots": ["./node_modules/@types", "./src/types"],
+      "target": "es2016",
+      "jsx": "preserve",
+      "module": "commonjs",
+      "allowJs": true,
+      "outDir": "./dist",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
+      "skipLibCheck": true
     },
-    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/server.ts"],
+    "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
     "exclude": ["node_modules", "dist", "client"]
   }
+  
