Migrated from moongoose to prisma with MySQL

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "dev": "nodemon"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
@@ -21,12 +21,12 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
     "ts-node": "^10.9.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prisma": "^6.6.0"
   }
 }
