--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "node dist/server.js",
     "postinstall": "prisma generate"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csrf": "^3.1.0",
     "dotenv": "^16.5.0",
@@ -30,6 +30,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "nodemon": "^3.1.9",
     "prisma": "^6.6.0"
   }
