--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/cookie-parser": "^1.4.8",
     "@types/node": "^22.14.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
